--- a/figures/gene_list_inter_overlap_vis.ipynb
+++ b/figures/gene_list_inter_overlap_vis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "injured-princeton",
+   "id": "editorial-immunology",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "timely-antibody",
+   "id": "comparative-basics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "superb-stone",
+   "id": "intellectual-yukon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
     "guide_size <- 1\n",
     "family <- \"arial\"\n",
     "dpi <- 320\n",
-    "vd_ht <- 4\n",
+    "vd_ht <- 3\n",
     "vd_wd <- vd_ht\n",
     "label_size <- 10"
    ]
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "creative-cabinet",
+   "id": "smart-accused",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "subjective-topic",
+   "id": "selective-projector",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "olive-speech",
+   "id": "czech-gathering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "southern-hughes",
+   "id": "assumed-sweet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "continent-insight",
+   "id": "musical-teach",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bizarre-pizza",
+   "id": "sorted-courtesy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,13 +217,15 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "union-perspective",
+   "id": "daily-morris",
    "metadata": {},
    "outputs": [],
    "source": [
     "quantites_list <- list(fontsize = text_size - 2, col = \"gray10\")\n",
+    "# quantites_list <- list(fontsize = label_size, col = \"gray10\")\n",
     "edges_list <- list(lwd = 1, alpha = .5, col = \"gray80\")\n",
     "labels_list <- list(fontsize = (text_size - 2))\n",
+    "# labels_list <- list(fontsize = (label_size))\n",
     "# Must be in same order as DF columns (CESC, UCS, UCEC)\n",
     "fills_list <- list(fill = c(CESC = \"#ffd8c7\", UCS = \"#5cd2d9\", UCEC = \"#ff6927\"))\n",
     "\n",
@@ -253,8 +255,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "amateur-brunei",
+   "execution_count": 11,
+   "id": "soviet-inventory",
    "metadata": {},
    "outputs": [
     {
@@ -327,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "detailed-society",
+   "execution_count": 12,
+   "id": "quality-invite",
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +398,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "supreme-image",
+   "execution_count": 13,
+   "id": "mighty-addition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "referenced-simon",
+   "id": "turned-rental",
    "metadata": {},
    "outputs": [],
    "source": []
