Paneling of WGCNA hubs.

--- a/figures/gene_list_inter_overlap_vis.ipynb
+++ b/figures/gene_list_inter_overlap_vis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "editorial-immunology",
+   "id": "characteristic-battlefield",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "comparative-basics",
+   "id": "confirmed-motor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,13 +70,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "intellectual-yukon",
+   "id": "advanced-saver",
    "metadata": {},
    "outputs": [],
    "source": [
     "text_size <- 8\n",
     "guide_size <- 1\n",
-    "family <- \"arial\"\n",
+    "family <- \"ArialMT\"\n",
     "dpi <- 320\n",
     "vd_ht <- 3\n",
     "vd_wd <- vd_ht\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "smart-accused",
+   "id": "under-offense",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "selective-projector",
+   "id": "dried-guinea",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "czech-gathering",
+   "id": "severe-fleece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "assumed-sweet",
+   "id": "australian-survivor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "musical-teach",
+   "id": "distributed-worse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "sorted-courtesy",
+   "id": "pregnant-reform",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "daily-morris",
+   "id": "industrial-cheese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "soviet-inventory",
+   "id": "collect-cemetery",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "quality-invite",
+   "id": "lonely-roommate",
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "mighty-addition",
+   "id": "union-football",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "turned-rental",
+   "id": "durable-variety",
    "metadata": {},
    "outputs": [],
    "source": []
