Supplementary figure for GLMnet optimization.

--- a/figures/figure_S2.ipynb
+++ b/figures/figure_S2.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "early-light",
+   "id": "collectible-concord",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "combined-worthy",
+   "id": "improved-seventh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "accessible-mission",
+   "id": "abstract-district",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "polar-crossing",
+   "id": "waiting-african",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "completed-active",
+   "id": "oriental-hazard",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "hundred-mentor",
+   "id": "acting-glenn",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "behavioral-moral",
+   "id": "liked-animal",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dress-slovenia",
+   "id": "proprietary-chrome",
    "metadata": {},
    "outputs": [
     {
@@ -339,23 +339,23 @@
     "\n",
     "cesc_grid\n",
     "\n",
-    "figS2 <- cesc_grid"
+    "figS2A <- cesc_grid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "adult-moldova",
+   "id": "integral-disaster",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS2.png\"), plot = figS2, dpi = dpi, height = ht, width = wd)"
+    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS2A.png\"), plot = figS2A, dpi = dpi, height = ht, width = wd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "approved-broadway",
+   "id": "unlikely-effects",
    "metadata": {},
    "outputs": [
     {
@@ -390,23 +390,23 @@
     "\n",
     "ucec_grid\n",
     "\n",
-    "figS3 <- ucec_grid"
+    "figS2B <- ucec_grid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "identified-pattern",
+   "id": "beneficial-legislation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS3.png\"), plot = figS3, dpi = dpi, height = ht, width = wd)"
+    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS2B.png\"), plot = figS2B, dpi = dpi, height = ht, width = wd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "negative-unemployment",
+   "id": "objective-token",
    "metadata": {},
    "outputs": [
     {
@@ -441,23 +441,23 @@
     "\n",
     "ucs_grid\n",
     "\n",
-    "figS4 <- ucs_grid"
+    "figS2C <- ucs_grid"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ready-marine",
+   "id": "important-shopping",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS4.png\"), plot = figS4, dpi = dpi, height = ht, width = wd)"
+    "ggsave(filename = paste0(dirs$figures_dir, \"/paneled/figureS2C.png\"), plot = figS2C, dpi = dpi, height = ht, width = wd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "voluntary-valuable",
+   "id": "blank-straight",
    "metadata": {},
    "outputs": [],
    "source": []
