Random seed added to WGCNA clustering code. No change to results.

--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "multiple-lexington",
+   "id": "insured-possibility",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "backed-credits",
+   "id": "herbal-murray",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "outer-validity",
+   "id": "arranged-surgery",
    "metadata": {},
    "outputs": [],
    "source": [
     "dset_idx <- 3\n",
-    "save_lists <- FALSE"
+    "save_lists <- TRUE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "organic-stick",
+   "id": "acquired-howard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sustained-bosnia",
+   "id": "caroline-logging",
    "metadata": {},
    "source": [
     "# Functions"
@@ -86,14 +86,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expensive-somalia",
+   "id": "narrative-oxford",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "stable-therapist",
+   "id": "proved-sequence",
    "metadata": {},
    "source": [
     "# Data"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "engaged-moldova",
+   "id": "eight-discount",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -127,7 +127,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -136,7 +136,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -150,7 +150,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  coeff = \u001b[32mcol_double()\u001b[39m\n",
@@ -158,7 +158,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -168,7 +168,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  km_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -180,7 +180,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_coefs = \u001b[32mcol_double()\u001b[39m,\n",
@@ -191,7 +191,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -210,7 +210,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -220,7 +220,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
@@ -230,7 +230,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  module = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_cor = \u001b[32mcol_double()\u001b[39m,\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "light-bible",
+   "id": "regional-complexity",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "overhead-tackle",
+   "id": "stable-toner",
    "metadata": {},
    "source": [
     "## DEG"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "authentic-language",
+   "id": "instrumental-fellowship",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "configured-offense",
+   "id": "colored-austin",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "casual-papua",
+   "id": "beginning-landscape",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "instructional-covering",
+   "id": "phantom-financing",
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "internal-value",
+   "id": "prompt-albert",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "quantitative-canadian",
+   "id": "portuguese-zoning",
    "metadata": {},
    "source": [
     "## FIGO"
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "right-exploration",
+   "id": "thirty-processing",
    "metadata": {},
    "source": [
     "### LASSO multinomial regression"
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "tutorial-detection",
+   "id": "minute-venture",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honest-invasion",
+   "id": "southwest-update",
    "metadata": {},
    "source": [
     "### Welch ANOVA"
@@ -578,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "national-warning",
+   "id": "innocent-limit",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "focused-colorado",
+   "id": "lonely-hydrogen",
    "metadata": {},
    "source": [
     "### Point-biserial correlation with FIGO"
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "genetic-thailand",
+   "id": "adequate-recall",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "aboriginal-eagle",
+   "id": "utility-tiffany",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "removable-walker",
+   "id": "changed-dublin",
    "metadata": {},
    "source": [
     "## Survival"
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conservative-marina",
+   "id": "judicial-seller",
    "metadata": {},
    "source": [
     "### LASSO Cox PH"
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "female-delaware",
+   "id": "civilian-butterfly",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stock-dublin",
+   "id": "grave-portfolio",
    "metadata": {},
    "source": [
     "### Univariate KM/Cox PH"
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "altered-minority",
+   "id": "extreme-hours",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competitive-atlanta",
+   "id": "brazilian-tonight",
    "metadata": {},
    "source": [
     "### Censored time screen"
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "rotary-wireless",
+   "id": "devoted-camel",
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "elder-lodge",
+   "id": "activated-graduation",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "sustained-providence",
+   "id": "available-accent",
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-footage",
+   "id": "cosmetic-lindsay",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -962,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "through-reality",
+   "id": "classical-shell",
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "occasional-address",
+   "id": "radical-organizer",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "configured-pasta",
+   "id": "respected-legend",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tribal-castle",
+   "id": "trained-wheel",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -1077,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "honey-margin",
+   "id": "smart-intro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "beautiful-relationship",
+   "id": "passive-shoulder",
    "metadata": {},
    "outputs": [
     {
@@ -1321,7 +1321,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "corresponding-xerox",
+   "id": "thrown-cooperation",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "front-ranch",
+   "id": "executive-vector",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1358,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "everyday-china",
+   "id": "solar-taiwan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "static-romantic",
+   "id": "superb-activity",
    "metadata": {},
    "outputs": [],
    "source": []
