Updated enrichment meta analysis.

--- a/meta_analysis/enrichment_meta.ipynb
+++ b/meta_analysis/enrichment_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "unexpected-newspaper",
+   "id": "earned-links",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bound-venezuela",
+   "id": "prime-wheat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "institutional-indicator",
+   "id": "dated-supplement",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +59,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "demonstrated-invasion",
-   "metadata": {},
+   "id": "starting-petite",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -183,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "behavioral-sister",
+   "execution_count": 5,
+   "id": "respected-frame",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "elegant-casting",
+   "id": "considered-agent",
    "metadata": {},
    "source": [
     "# FIGO"
@@ -225,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "public-regular",
+   "id": "lined-flight",
    "metadata": {},
    "source": [
     "## Proportion of total shared by all"
@@ -233,8 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "enclosed-edinburgh",
+   "execution_count": 6,
+   "id": "adopted-finish",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pacific-journey",
+   "id": "taken-nowhere",
    "metadata": {},
    "source": [
     "## Proportion of top n shared by all"
@@ -309,8 +314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "southeast-ensemble",
+   "execution_count": 7,
+   "id": "intimate-mission",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +375,7 @@
    ],
    "source": [
     "n <- 10\n",
-    "figo_topn_lists <- topn_lists(figo_go, n = 10)\n",
+    "figo_topn_lists <- topn_lists(figo_go, n = n)\n",
     "length(figo_topn_lists$topn_union)\n",
     "length(figo_topn_lists$topn_intersect)\n",
     "length(figo_topn_lists$topn_intersect) / length(figo_topn_lists$topn_union)"
@@ -378,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "linear-giant",
+   "id": "related-samba",
    "metadata": {},
    "source": [
     "# Survival"
@@ -386,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "working-sweden",
+   "id": "familiar-closure",
    "metadata": {},
    "source": [
     "## Proportion of total shared by all"
@@ -394,8 +399,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "empirical-season",
+   "execution_count": 8,
+   "id": "wrong-archives",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "further-bracelet",
+   "id": "inclusive-brook",
    "metadata": {},
    "source": [
     "## Proportion of top n shared by all"
@@ -470,8 +475,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "genetic-drunk",
+   "execution_count": 9,
+   "id": "racial-rogers",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +536,7 @@
    ],
    "source": [
     "n <- 10\n",
-    "survival_topn_lists <- topn_lists(survival_go, n = 10)\n",
+    "survival_topn_lists <- topn_lists(survival_go, n = n)\n",
     "length(survival_topn_lists$topn_union)\n",
     "length(survival_topn_lists$topn_intersect)\n",
     "length(survival_topn_lists$topn_intersect) / length(survival_topn_lists$topn_union)"
@@ -540,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "prostate-bahrain",
+   "id": "honest-designation",
    "metadata": {},
    "outputs": [],
    "source": []
